fix: instagram - overflow: hidden, add target and title in friend__link

--- a/css/style.scss
+++ b/css/style.scss
@@ -49,17 +49,18 @@ a, a:hover, a:active, a:visited, a:focus {
         .navbar__social__list{
           padding-right: 0;
           margin-bottom: 0;
-          // @include max-screen(992px){
-          //   justify-content: flex-start;
+           @include max-screen(992px){
+             display: none;
 
-          // }
+           }
           
           .social__item{
             margin-left: 1rem;
             @include max-screen(992px){
-              margin-left: 0;
-              margin-right: 1rem;
-              margin-bottom: 1rem;
+              display: none;
+              //margin-left: 0;
+              //margin-right: 1rem;
+              //margin-bottom: 1rem;
             }
             a{
               display: inline-block;
@@ -404,6 +405,7 @@ a, a:hover, a:active, a:visited, a:focus {
 
 .instagram{
   padding: 80px 0 40px;
+  overflow: hidden;
   .container{    
     .instagram__title{
       margin-bottom: 30px;
@@ -485,15 +487,17 @@ a, a:hover, a:active, a:visited, a:focus {
       text-align: center;
       margin-bottom: 40px;
     }
-    img{
+    a{
+      display: inline-block;
       margin-right: 30px;
+
       @include max-screen(992px){
         margin-right: 10px;
-        margin-bottom: 10px;
+        margin-bottom: 20px;
       }
       @media screen and (max-width: 567px) {
         margin-right: 10px;
-        margin-bottom: 10px;
+        margin-bottom: 20px;
         }
       }
 
